--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
     "colors": "^1.1.2",
-    "cream-and-sugar": "0.0.1-alpha7",
+    "cream-and-sugar": "0.0.3-alpha1",
+    "creamify": "0.0.1-alpha2",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
